# statusbar-govee

./: LICENSE  README.md  bun.lockb  package.json
src/: app.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/src/: command.rs  main.rs
src/components/: BrightnessControl.svelte  ColorControl.svelte  DeviceCard.svelte  DeviceList.svelte  PowerControl.svelte  ScenesControl.svelte  StatusIndicator.svelte
src/routes/: +layout.ts  +page.svelte
