[package]
name = "statusbar-govee"
version = "0.0.0"
description = "A Tauri App"
authors = ["Pum"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.2.2", features = [
  "macos-private-api",
  "tray-icon",
  "image-png",
] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"

tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
monitor = { git = "https://github.com/ahkohd/tauri-toolkit", branch = "v2" }

tauri-plugin-shell = "2.0.0-beta.7"

reqwest = { version = "0.12.0", features = ["json"] }
uuid = { version = "1.12.0", features = ["v4"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
